src/modules/dashboard/components/ColonyActions/ColonyActions.css
.main {
  display: block;
}

.filter {
  display: inline-block;
  margin-right: 10px;
}

.filter span {
  font-size: var(--size-small);
}

.controls {
  margin-top: 22px;
  text-align: center;
}

.emptyState {
  margin-top: 30px;
}

.loadingSpinner {
  margin-top: 100px;
}

.bar {
  display: flex;
  align-items: center;

  /* The Select component (sorting dropdown) already has 10px top and bottom padding
  So we are adding the rest as margins to follow the spec */
  margin-top: 11px;
  margin-bottom: 2px;
}

.title {
  flex-grow: 2;
  font-size: var(--size-smallish);
  font-weight: var(--weight-bold);
  color: var(--dark);
}

.link {
  font-size: var(--size-small);
  font-weight: var(--weight-bold);
  color: var(--dark-blue);
}

